# AFERNANDEZ_ms_2024

./: .gitignore  .readthedocs.yaml  README.md  comandos.txt  config.yaml  enlaces.txt  extract_data.py  modules.rst  prueba.py  pyproject.toml  requirements.txt  test_InfluxDBms_conn.py  test_import.py  trayectoria_gps.html
InfluxDBms/: .buildinfo  .config_db.yaml  README.md  __init__.py  cInfluxDB.py  config_db.yaml  fecha_verbose.py  imports.txt  influxdb_tools.py  orden.sh  plot_functions_InfluxDB.py  readme.md  readme_InfluxDBms.md  reqJOM.txt  requirements.txt  requirementsA.txt  resultados.txt  setup.py
conexionBBDD/: DbClassInflux.py  consulta_influxdb.py  fecha_verbose.py  modules.rst
docs/: InfluxDBms.rst  architecture.rst  conf.py  general_structure.rst  index.rst  installation.rst  intro.rst  modules.rst  motivation.rst  msGeom.rst  requirements.txt  results.rst  test_InfluxDB.rst  transfom_data.rst  transform_data.rst
gps_trajectory/: README.md  gps_map_generator.py  run_gps_map.py
msGeom/: README.md  data_geoms.py  data_preprocessor.py  imu_processor.py  kalman_filter.py  kalman_processor.py  madgwick.py  peak_detector.py  plot_processor.py  quaternion.py  requirements.txt  result_processor.py  stride_processor.py  transformations.py
outs/: orden.sh  rename.sh  rename2.sh
sups/: add_class.sh
test_InfluxDB/: InfluxDBms  README.md  check_fields.py  comandosEjecucion.txt  extract_data.py  readme_test_InfluxDB.md  test_InfluxDBms_conn.py  test_influx_aggWindow.py  test_influx_basic.py  test_influx_basic_conMetrics.py
transform_data/: README.md  class_madwick.py  class_test.py  class_transform_imu.py  stride_measurement.py  stride_measurement_adjustCovMatrix.py  stride_measurement_v1.py  stride_measurement_v2.py  stride_measurement_v3.py  stride_measurement_v4.py  test_data_feet.py  test_filter_madwick.py  test_filters.py  transform_imu_ahrs.py  transform_imu_madwick_v1.py  transform_imu_madwick_v2.py  transform_imu_madwick_v3.py  transform_imu_madwick_v5.py  transform_imu_mix_v2.py  transform_imu_mix_v3.py  transform_imu_skinemtics_simplex.py  transform_imu_unif.py
transfornm_data/: clase_madgwick.py  class_transform_imu.py  compara_result.py  imu_resultado_ahrs.xlsx  prueba2.py  set_var.py  transform_data_IMU.py  transform_imu_5.py  (+17 more)
(+130 files in other folders)
