[tool.poetry]
name = "microGaitMs"
version = "0.1.0"
description = "Package to deal with micro Gait expressions in Multiple Sclerosis"
authors = ["Angela Fernandez <angela.fernandez@alumnos.upm.es>"]
packages = [{ include = "InfluxDBms" },{ include = "msGeom"}]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
influxdb_client = "^1.48.0"
openpyxl = "^3.1.5"
matplotlib = "^3.7.0"
pandas = "^2.2.3"
numpy = "^1.24"
PyYAML = "^6.0.2"
setuptools = "^75.8.0"
urllib3 = "^2.4.0"
folium = "^0.18"
scipy = "^1.12.0"
plotly = "^5.20.0"
filterpy = "^1.4.5"
geopy = "^2.4.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
